<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Olá Thiago" />

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"
        tools:text="Ag 2030" />


    <TextView
        android:id="@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        tools:text="CC 01121021-5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_conta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_paid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/saldo_disponivel"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_saldo"
                app:layout_constraintStart_toEndOf="@id/iv_saldo"
                app:layout_constraintTop_toTopOf="@+id/iv_saldo" />

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_expand_less"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_saldo"
                app:layout_constraintTop_toBottomOf="@id/iv_saldo"
                tools:text="R$: 1.500,51" />

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/saldo_limite"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/tv_saldo"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo" />


            <TextView
                android:id="@+id/tv_saldo_com_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo"
                tools:text="R$ 2.345.00" />

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_com_limite" />

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_extrato"
                android:textColor="@color/redSecundary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/line_view"

                app:layout_constraintStart_toStartOf="@id/line_view"

                app:layout_constraintTop_toBottomOf="@+id/line_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card"
                app:layout_constraintBottom_toBottomOf="@id/tv_pagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/redSecundary" />

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="Pagar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_pagar" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_transferir"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/mcv_pagar"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_transferir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/redSecundary" />

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_transferir" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_recarregar"
        android:layout_width="115dp"
        android:elevation="50dp"
        android:layout_height="115dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_transferir"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_iphone_black_24dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_recarregar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/redSecundary" />

            <TextView
                android:id="@+id/tv_recarregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recarregar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_recarregar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:background="@color/redPrimary"
        android:id="@+id/iv_cartao_final_content"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_cartao_final_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_o_final"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final_content"
        app:layout_constraintStart_toStartOf="@id/iv_cartao_final_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00033"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final_content"
        app:layout_constraintStart_toEndOf="@id/tv_cartao_final_value"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final_content"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_expand_more"
       app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final_content"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final_content"
        app:layout_constraintEnd_toEndOf="@id/iv_cartao_final_content"
        android:layout_margin="16dp"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>